# tagged-types

./: Cargo.toml  LICENSE  Makefile  README.md
derive/: Cargo.toml
derive/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs  tagged_type.rs  traits.rs
lib/src/tagged_type/: cmp.rs  serde.rs
lib/src/traits/: cmp.rs  permissive.rs  serde.rs
src/: lib.rs  tagged_type.rs  traits.rs
