# SPDX-License-Identifier: MIT


[workspace]
members = [
   "lib",
   "derive"
]

[workspace.package]
version = "0.2.0"
license = "MIT"
repository = "https://github.com/poroh/tagged-types"
readme = "README.md"
edition = "2018"
keywords = ["rust", "types"]
categories = ["data-structures"]
documentation = "https://docs.rs/tagged-types"

