# SPDX-License-Identifier: MIT

[workspace]
members = [
   "lib",
   "derive"
]

[workspace.package]
version = "0.2.2"
license = "MIT"
repository = "https://github.com/poroh/tagged-types"
readme = "README.md"
edition = "2018"
keywords = ["rust", "types"]
categories = ["data-structures"]
documentation = "https://docs.rs/tagged-types"

[workspace.dependencies]
# Optional dependencies for tagged-types
tagged-types-derive = { version = "0.2", path = "./derive" }
serde = { version = "1.0", features = [] }
# For testing:
serde_json = { version = "1.0" }
# Dependencies of tagged-types-derive
syn = { version = "2.0", features = [] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
proc-macro-crate = { version = "3.3" }
# Dev dependency for tagged-types-derive
tagged-types = { version = "0.2", path = "./lib" }
