# SPDX-License-Identifier: MIT
#

[package]
name = "tagged-types-derive"
description = "Define derive procmacro for tagged types"
documentation.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

